--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 <style>
 canvas {
     border: 1px solid #d3d3d3; 
-    background: url('./assets/back_2.jpg');
+    background: url('./assets/back-2.jpg');
     background-repeat: no-repeat;
     background-size: cover; 
 }
