basic styling added

--- a/game.html
+++ b/game.html
@@ -98,7 +98,7 @@ input[type=submit]:hover {
     <img src="./assets/evil-2.png" alt="voldemort" id="voldemort" style="display: none;">
     <canvas id="myCanvas" width="800" height="450"></canvas>
     <form action="#">
-        <input type="text" id="console"></input>
+        <input type="text" id="console" placeholder="Type your spell here"></input>
         <input type="submit" id="spell" value="Execute Spell"></input>
     </form>
     </div>
@@ -134,7 +134,7 @@ var requestAnimationFrame;
 var x, y, rx, ry;
 var iLastTime=0, iTime=0, iTotal=0, iKeys=0;
 var lastDownTarget;
-var spells = ['', 'stupefy', 'repello', 'crucio', 'protego', 'expulso', 'relashio', 'expelliarmus', 'avada kedavra', 'expecto petronum'];
+var spells = ["","tuffise","repello","grufio","protego","impulso","relafio","fidelestrium","abra kadabra","firtus sippotine", "faceto galacto pulsato"];
 
 for (spell in spells) {
     if (spell == 0)
