--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			<li>The aim is simple... Type a spell from the list of spells and press <b>enter</b> to execute a spell.</li>
 			<li>The faster you type and execute, the quicker the health of the opponent decreases.</li>
 			<li>Each spell has a <b>power</b> attached to it. The spell with larger power will lead to decrease in larger amount of opponents' health.</li>
+			<li>The first spell is just practice... scoring starts form second.</li>
 			<li>The opponent (the dark species indeed...!!!) would continually attack you... You won't be spared if you can't keep up with them.!!!</li>
 			<li>So... the one who dies first, loses... so simple!</li>
 			<li>You can see your characters per min and words per min from the side pane... making it a real typing test too :-p</li>
